[package]
name = "jero"
version = "0.1.0"
edition = "2024"
authors.workspace = true
description.workspace = true

[dependencies]
crossterm = { version = "0.29.0", features = ["bracketed-paste", "derive-more", "event-stream", "events", "osc52", "windows"] }
ratatui = { version = "0.30.0", features = ["all-widgets", "crossterm", "layout-cache", "macros", "scrolling-regions", "std", "underline-color", "widget-calendar"] }
ratatui-core = { version = "0.1.0", features = ["layout-cache", "scrolling-regions", "std", "underline-color"] }

